mblog博客系统version：1.6； 上线到服务器版本，完成底部栏备案信息添加；

--- a/src/main/resources/templates/about_1.html
+++ b/src/main/resources/templates/about_1.html
@@ -77,8 +77,8 @@
                 </div>
             </div>
             <div class="item m-padded-lr-responsive m-padded-tb-large-responsive teal m-text-spaced" style="text-align: center">
-                <p>MBLOG的博客是一个由个人开发的博客网站，后端使用SpringBoot + Mybatis + Redis，前端框架使用Semantic。于2020年04月20日开发。
-                    本站采用华为云提供的服务器ECS和阿里云的存储对象OSS。</p>
+                <p>MBLOG的博客是一个由个人开发的博客网站，后端使用SpringBoot + Jpa + Nginx，前端框架使用Semantic。于2020年04月20日开发。
+                    本站采用阿里云提供的服务器ECS和阿里云的存储对象OSS。</p>
             </div>
         </div>
 
